--- a/index.html
+++ b/index.html
@@ -13,3 +13,26 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CJ's Portfolio</title>
+    </head>
+<body>
+<h1>CJ's Portfolio</h1>
+<h2>I am a DevOps Engineer learning Full Stack stuff</h2>
+<hr>
+<h3><a href="./public/movie-ranking.html"> My Movie Ranking </a></h3>
+<img src="./assets/images/movie-ranking2.png" height="200" alt="Movie Ranking" />
+<br />
+
+<h3> <a href="./public/birthday-invite.html"> Birthday Invite Project</a></h3>
+
+<img src="./assets/images/birthday-invite2.png" height="200" alt="Birthday Cake" />
+<hr />
+<h5><a href="./public/about.html"> About Me</a> <a href="./public/contact.html"> Contact Me</a></h5> 
+</body>
+</html>
